Fix spacing on waybar

--- a/modules/home/desktop/waybar/style.css
+++ b/modules/home/desktop/waybar/style.css
@@ -12,8 +12,8 @@ window#waybar {
 }
 
 #workspaces button {
-    padding: 0.3rem 0.6rem;
-    margin: 0.4rem 0.25rem;
+    padding: 5px 10px;
+    margin: 5px 2.5px 8px 2.5px;
     background-color: #@base01@;
     border: 1px solid #@base03@;
     border-radius: 6px;
@@ -26,7 +26,7 @@ window#waybar {
 #workspaces button:hover {
     /* Remove default all hover effects */
     /* https://github.com/Alexays/Waybar/issues/60 */
-    padding: 0.3rem 0.6rem;
+    padding: 5px 10px;
     box-shadow: none;
     text-shadow: none;
     background-color: #@base01@;
@@ -58,8 +58,8 @@ window#waybar {
 #bluetooth,
 #wireplumber,
 #clock {
-    padding: 0.3rem 0.6rem;
-    margin: 0.4rem 0.25rem;
+    padding: 5px 10px;
+    margin: 5px 2.5px 8px 2.5px;
     background-color: #@base01@;
     border: 1px solid #@base03@;
     border-radius: 6px;
@@ -82,11 +82,12 @@ window#waybar.empty #waybar-mpris {
 
 #custom-nixos-icon {
     color: #@base0B@;
+    margin-left: 5px;
 }
 
 #waybar-mpris {
-    padding: 0.3rem 0.6rem;
-    margin: 0.4rem 0.25rem;
+    padding: 5px 10px;
+    margin: 5px 2.5px 8px 2.5px;
     border: 1px;
     color: #@base05@;
     background-color: transparent;
@@ -118,4 +119,5 @@ window#waybar.empty #waybar-mpris {
 
 #clock {
     color: #@base05@;
+    margin-right: 5px;
 }
